boreal/tests/assets/invalid_files/compilation/import_unknown.yar
import "time"
import "mohg"

rule a {
    condition: true
}
